--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -56,13 +56,14 @@ li a:hover{
     display:inline; 
     float:right;
     margin-top:20px;
+    color: white;
 }
 
 
 
 .atext{
     color:white;
-    width: 600px;
+   
     height: 134px;
     font-style: normal;
     font-weight: 650;
@@ -75,8 +76,7 @@ li a:hover{
 
 }
 .btext{
-padding-left:28px;
-width: 604px;
+padding-left:28px;  
 height: 48px;
 left: 133px;
 top: 445px;
@@ -101,10 +101,15 @@ color: #898CA9;
 }
 .intro{
   margin-left:95px;
-  padding-top:120px;
-  width:805px;
-  height:400px;
+  margin-top:120px;
+  padding-left: 100px;
 
+}
+
+.form{
+    display: block;
+    float: left;
+    margin-left: 100px;
 }
 img {
     border-radius: 20px 20px 0px 0px;
@@ -301,6 +306,31 @@ td{
     margin-right: 12vh;
     margin-top: 18vh;
 }
+.heroleft{
+    width: 46%;
+}
+fieldset {
+    width: 78%;
+    color: white;
+    border: 2px solid white;
+    border-radius: 10px;
+    font-size: 30px;
+    padding: 30px;
+}
+.forms{
+    float: left;
+}
+
+.test {
+    display: inline;
+}
+.red {
+    border: 1px solid red;
+}
+label {
+    font-size: 20px;
+}
+
 .card5{
     margin-left:10vh;
     padding-top:17vh;
